<resources>
    <string name="app_name">SAPPARInventory</string>
    <string name="EnterJHEDIDLabel">JHEDID:</string>
    <string name="EnterPlantLabel">Plant:</string>
    <string name="EnterTemplateLabel">PAR Template:</string>
    <string name="action_settings">Settings</string>
    <string name="menu_count">Count Templates</string>
    <string name="menu_download_items">Download Template Items</string>
    <string name="menu_test_connect">Test SAP Connectivity</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About 1.0</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_logon_off">Logon/Logoff</string>
    <string name="title_activity_download_items">Download Items</string>

    <string name="about_text">You are on the About Activity screen!</string>
    <string name="downloadItems_text">You are on the Download Items Activity screen!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="TestNumericKeyboard">Test Numeric Keyboard: </string>
    <string name="btn_menu_count">Count Templates</string>
    <string name="btn_menu_load">Load Template Items</string>
    <string name="btn_menu_refresh_template_list">Refresh Template List</string>
    <string name="btn_menu_refresh_JHEDIDs">Refresh JHED ID  List</string>
    <string name="btn_menu_test_Connect">Test SAP Connectivity</string>
    <string name="btn_menu_exit">Exit</string>
    <string name="title_activity_count_templates_menu">CountTemplatesMenu</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_count_template">Template name here!!</string>
    <string name="title_activity_load_template">Load Templates to Count</string>
    <string name="title_activity_choose_template_menu">Select PAR Template</string>




</resources>
