<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/menu_logon_off"
        android:title="@string/menu_logon_off"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/menu_count"
        android:title="@string/menu_count"
        android:orderInCategory="101"
        android:showAsAction="always" />
    <item android:id="@+id/menu_download_items"
        android:title="@string/menu_download_items"
        android:orderInCategory="102"
        android:showAsAction="always" />
    <item android:id="@+id/menu_test_connect"
        android:title="@string/menu_test_connect"
        android:orderInCategory="103"
        android:showAsAction="always" />
    <item android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:orderInCategory="104"
        android:showAsAction="always" />
    <item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:orderInCategory="105"
        android:showAsAction="always" />
    <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="106"
        android:showAsAction="always" />
</menu>