<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_count"
        android:layout_alignLeft="@+id/btn_test_connectivity"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_menu_count"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu_load"
        android:id="@+id/btn_load_templates"
        android:layout_below="@+id/btn_count"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu_refresh_template_list"
        android:id="@+id/btn_refresh_template_list"
        android:layout_below="@+id/btn_load_templates"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu_refresh_JHEDIDs"
        android:id="@+id/btn_refresh_JHEDIDs"
        android:layout_below="@+id/btn_refresh_template_list"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu_test_Connect"
        android:id="@+id/btn_test_connectivity"
        android:layout_below="@+id/btn_refresh_JHEDIDs"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_menu_exit"
        android:id="@+id/btn_exit"
        android:layout_below="@+id/btn_test_connectivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enjoy!!"
        android:id="@+id/txt_menu_status"
        android:layout_below="@+id/btn_exit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

</RelativeLayout>
