<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sap.johnshopkins.sapparinventory.LoadTemplateActivity">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnr_JHEDID"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="112dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="28dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterJHEDIDLabel"
        android:id="@+id/lbl_JHEDID"
        android:layout_alignRight="@+id/spnr_JHEDID"
        android:layout_alignEnd="@+id/spnr_JHEDID"
        android:layout_marginRight="242dp"
        android:layout_marginEnd="242dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/lbl_Plant" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterPlantLabel"
        android:id="@+id/lbl_Plant"
        android:layout_below="@+id/spnr_JHEDID"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnr_Plant"
        android:layout_alignBottom="@+id/lbl_Plant"
        android:layout_alignLeft="@+id/spnr_JHEDID"
        android:layout_alignStart="@+id/spnr_JHEDID"
        android:longClickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterTemplateLabel"
        android:id="@+id/lbl_Template"
        android:layout_below="@+id/lbl_Plant"
        android:layout_alignRight="@+id/lbl_JHEDID"
        android:layout_alignEnd="@+id/lbl_JHEDID"
        android:layout_marginTop="52dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnr_Template"
        android:layout_below="@+id/lbl_Template"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Load"
        android:id="@+id/btn_Load"
        android:layout_below="@+id/spnr_Template"
        android:layout_marginTop="34dp"
        android:layout_toStartOf="@+id/spnr_Plant" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Count"
        android:id="@+id/btn_Count"
        android:layout_alignBottom="@+id/btn_Load"
        android:layout_toRightOf="@+id/btn_Load"
        android:layout_toEndOf="@+id/btn_Load"
        android:layout_alignTop="@+id/btn_Load" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exit"
        android:id="@+id/btn_Exit"
        android:layout_alignBottom="@+id/btn_Count"
        android:layout_toRightOf="@+id/btn_Count"
        android:layout_toEndOf="@+id/btn_Count"
        android:layout_alignTop="@+id/btn_Count" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lbl_status_area"
        android:layout_below="@+id/btn_Load"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:text="Enjoy --- Status Area" />

</RelativeLayout>
